投保细节修改

--- a/app/css/recognizee_compile.css
+++ b/app/css/recognizee_compile.css
@@ -9,7 +9,7 @@ input {
   border: none; }
 .recognizee_compile_ctrl .head_ctrl {
   padding: 15px 10px;
-  background: #fff; }
+  background: #f5f5f5; }
 .recognizee_compile_ctrl .head {
   box-sizing: border-box;
   border-radius: 5px;
