--- a/app/partials/supply_userinfo.html
+++ b/app/partials/supply_userinfo.html
@@ -1,4 +1,4 @@
-<link rel="stylesheet" href="css/recognizee_first.css?rev=e735f6fcadbc81351757e465551c5b9c">
+<link rel="stylesheet" href="css/recognizee_first.css?rev=53ac378e5c6090d1845f1792bd8d0184">
 <div class="recognizee_first_ctrl">
 	<div class="rgn_head">选择被保险人</div>
 	<div class="choose">
@@ -15,6 +15,7 @@
 		    </label>
         </div>
 	</div>
+	<div class="insured" ng-show="">该产品仅支持为本人投保</div>
 	<!-- 为本人 -->
 	<form  role="form" name="userform" novalidate >
 	<div class="self_people">
