--- a/app/css/toubao_new.css
+++ b/app/css/toubao_new.css
@@ -12,7 +12,21 @@ body {
   background-size: 8px;
   padding: 15px 10px;
   font-size: 13px;
+  min-height: 135px;
   line-height: 21px; }
+  .people-container .default-info {
+    min-height: 135px;
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -moz-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+    -webkit-justify-content: center;
+    justify-content: center;
+    -webkit-box-align: center;
+    -webkit-align-items: center;
+    align-items: center; }
   .people-container .name {
     margin-bottom: 12px;
     font-size: 18px; }
@@ -21,7 +35,8 @@ body {
   .people-container .tag {
     color: #999;
     vertical-align: -1px;
-    font-size: 13px; }
+    font-size: 13px;
+    margin-left: 10px; }
 .icon-clock {
   background: url("../img/toubao/clock.jpg") no-repeat center;
   background-size: 15px;
@@ -49,7 +64,7 @@ body {
     .solution-container li .product {
       padding: 10px;
       border-bottom: 1px solid #e2e2e2;
-      font-size: 12px;
+      font-size: 13px;
       line-height: 20px; }
     .solution-container li .money {
       color: #999; }
@@ -112,7 +127,8 @@ body {
   display: -webkit-flex;
   display: -moz-box;
   display: -ms-flexbox;
-  display: flex; }
+  display: flex;
+  z-index: 99; }
   .footer .left {
     -webkit-box-flex: 65;
     -webkit-flex: 65;
@@ -131,4 +147,5 @@ body {
     -moz-box-flex: 35;
     -ms-flex: 35;
     flex: 35;
-    background-color: #ff5c00; }
+    background-color: #ff5c00;
+    cursor: pointer; }
