--- a/app/sass/recognizee_compile.scss
+++ b/app/sass/recognizee_compile.scss
@@ -15,7 +15,7 @@ input {
 .recognizee_compile_ctrl {
 	.head_ctrl {
 		padding: 15px 10px;
-		background: #fff;
+		background: #f5f5f5;
 	}
 	.head {
 		
