--- a/app/sass/recognizee_first.scss
+++ b/app/sass/recognizee_first.scss
@@ -25,6 +25,14 @@ body {
 			@include flex(1);
 		}
 	}
+	.insured{
+		color:#ff5c00;
+		text-align: center;
+		line-height: 1.03rem;
+		background: #fff;
+		border-bottom: 1px solid #c4c4c4;
+		font-size: 15px; 
+	}
 	.ziliao {
 		margin-top: .13rem;
 		color:#555;
