--- a/app/partials/toubao_new.html
+++ b/app/partials/toubao_new.html
@@ -1,4 +1,4 @@
-<div cg-busy="prePromise" >
+<div cg-busy="prePromise" class="toubao_new_ctrl">
 <div class="main-wrapper"  data-ng-init="init()"  >
 	<div class="people-container" ng-click="goRoute()">
 		<div ng-show="isFirst" class="default-info">
