--- a/app/sass/solution.scss
+++ b/app/sass/solution.scss
@@ -191,4 +191,9 @@ body {
 	max-height: 325px;
 	// height: 325px;
 	overflow: auto;
+	overflow:scroll;  //显示滚动条
+	overflow-y: scroll; //显示纵向滚动条 
+	height: auto;
+	border: 30px solid #fff;
+	padding: 0;
 }
