--- a/app/css/toubao_new.css
+++ b/app/css/toubao_new.css
@@ -3,8 +3,10 @@
   box-sizing: border-box; }
 body {
   background-color: #f5f5f5; }
+.toubao_new_ctrl {
+  margin-bottom: 48px; }
 .main-wrapper {
-  margin-bottom: 60px; }
+  margin-bottom: 10px; }
 .people-container {
   border-left: 5px solid #006ee9;
   border-bottom: 1px solid #ccc;
