--- a/app/sass/toubao_new.scss
+++ b/app/sass/toubao_new.scss
@@ -7,8 +7,11 @@
 body{
 	background-color: #f5f5f5;
 }
+.toubao_new_ctrl {
+	margin-bottom: 48px;
+}
 .main-wrapper {
-	margin-bottom:60px;
+	margin-bottom: 10px;
 }
 
 .people-container {
