--- a/app/css/solution.css
+++ b/app/css/solution.css
@@ -111,6 +111,8 @@
     .solution li .arrow {
       background: url("../img/solution/arrow.png") no-repeat center;
       background-size: 8px; }
+    .solution li .arrow.noclick {
+      background: none; }
     .solution li .product {
       -webkit-box-flex: 4;
       -webkit-flex: 4;
