--- a/app/partials/solution.html
+++ b/app/partials/solution.html
@@ -6,7 +6,7 @@
 <div class="header">
 	<div class="logo icon_{{type}}"> </div>
 	<div class="contaienr">
-		<div class="title">意外保障方案 {{data.score}}分</div>	
+		<div class="title">意外保障方案 {{data.score | number:1}}分</div>	
 		<div class="sub-title">方案金额:{{money}} 元</div>	
 	</div>
 </div>
@@ -20,15 +20,16 @@
 <div class="introd">方案内容</div>
 <ul class="solution">
 
-	<li  ng-repeat="plan in data.plans" ng-click="go(plan)">
-		<div class="checkbox "  ng-class="{'choose': plan.status==1 && !plan.unchecked, '': plan.status!=1 , 'unchoose':plan.status==1 && plan.unchecked }"></div>	
-		<div class="product">
+	<li  ng-repeat="plan in data.plans" >
+		<div class="checkbox " ng-click="go(plan)"  ng-class="{'choose': plan.status==1 && !plan.unchecked, '': plan.status!=1 , 'unchoose':plan.status==1 && plan.unchecked }"></div>	
+		<div class="product"  ng-click = "goDetail(plan)">
 			<div class="product-name">{{plan.name}}</div>	
 			<div class="product-des">最高保额：{{plan.premium}}元 保{{plan.coverage_period}}{{getCoverageType(plan.coverage_period_type)}}</div>	
 			<div class="product-price"> {{processSpecialMoney(plan.sum_insured)}} <span ng-if="plan.status!=1" class="status {{get_taocan_css(plan.status)}}" > {{getTaoCanStatus(plan.status)}}</span>
 			</div>
 		</div>	
-		<div class="arrow"></div>	
+		<div class="arrow" ng-class="{'noclick': !plan.official_site}"  ng-click = "goDetail(plan)"></div>	
+		
 	</li>	
 	<!--
 	<li>
@@ -55,9 +56,12 @@
 <script type="text/javascript">
 
  $("body").on("click",".left-td",function(){
- 	
-    $("#popup").find(".toast").html($(this).attr("des"));
-   	$("#popup").show();
+ 	var des =  $(this).attr("des");
+ 	if(des){
+		$("#popup").find(".toast").html(des);
+	   	$("#popup").show();
+ 	}
+    
  });
 
 </script>
