--- a/app/sass/solution.scss
+++ b/app/sass/solution.scss
@@ -136,6 +136,9 @@
 			background:url('../img/solution/arrow.png') no-repeat center;
 			background-size:8px;
 		}
+		.arrow.noclick{
+			background:none;
+		}
 		.product{
 			@include flex(4);
 			padding:10px 0;
