--- a/app/partials/recognizee.html
+++ b/app/partials/recognizee.html
@@ -2,7 +2,7 @@
 <div class="recognizee_contrl">
 	<ul class="delete">
 		<li>被保人资料</li>
-		<li ng-click="deleteMessage()">删 除</li>
+		<li ng-click="deleteMessage()" ng-show="method=='edit'">删 除</li>
 	</ul>
 	<div class="regenizee_main">
 		<form  role="form" name="userform" novalidate >
