--- a/app/css/toubao_new.css
+++ b/app/css/toubao_new.css
@@ -56,29 +56,29 @@ body {
   border-bottom: 1px solid #ccc;
   background: #fff url("../img/solution/arrow.jpg") no-repeat 96% 47%;
   background-size: 8px; }
-.solution-container {
+.toubao-container {
   background-color: #FFF;
   padding: 5px 0;
   border-bottom: 1px solid #ccc; }
-  .solution-container li {
+  .toubao-container li {
     background-color: #f9f9f9;
     margin-bottom: 5px; }
-    .solution-container li .product {
+    .toubao-container li .product {
       padding: 10px;
       border-bottom: 1px solid #e2e2e2;
       font-size: 13px;
       line-height: 20px; }
-    .solution-container li .money {
+    .toubao-container li .money {
       color: #999; }
-    .solution-container li .fee {
+    .toubao-container li .fee {
       color: #ff5c00;
       font-weight: bold; }
-    .solution-container li .money-container {
+    .toubao-container li .money-container {
       padding: 0 15px;
       height: 45px;
       line-height: 45px;
       font-size: 13px; }
-    .solution-container li .modify {
+    .toubao-container li .modify {
       color: #55a5ff; }
 .supply-info {
   margin-top: 20px;
