--- a/app/partials/recognizee_compile.html
+++ b/app/partials/recognizee_compile.html
@@ -1,4 +1,4 @@
-<link rel="stylesheet" href="css/recognizee_compile.css">
+<link rel="stylesheet" href="css/recognizee_compile.css?rev=3a34ee51936dea98d2fc45c452289625">
 <div class="recognizee_compile_ctrl" data-ng-init="init()"  cg-busy="secondPromise">
 	<div class="head_ctrl">
 		<div class="head" ng-click="addPeople()"><img src="wx_share/img/rc/jia.png" >  新增被保险人</div>
