--- a/app/partials/solution.html
+++ b/app/partials/solution.html
@@ -1,5 +1,5 @@
 <div class="mask" id="popup">
-	<div class="toast"></div>
+	<div class="toast" id="stopPro"></div>
 </div>
 
 <div class="solution-container"  cg-busy="solutionPromise">
@@ -17,7 +17,7 @@
 </div>
 	<div class="more" ng-if="data.coverages.length>(showNum+1)"  data-switch='on' ng-click="more($event)"><span>查看更多</span><div class="icon-arrow"></div></div>
 
-<div class="introd">方案内容</div>
+<div class="contents">方案内容</div>
 <ul class="solution">
 
 	<li  ng-repeat="plan in data.plans" ng-click="go(plan)">
@@ -58,5 +58,6 @@
     $("#popup").find(".toast").html($(this).attr("des"));
    	$("#popup").show();
  });
+ 
 
 </script>
