--- a/app/partials/toubao_new.html
+++ b/app/partials/toubao_new.html
@@ -18,7 +18,7 @@
 	<div class="solution-title">
 		<div class="icon-clock"></div>&nbsp;方案生效时间 <span class="fr"><input type="date" name="effectivedate" ng-model="user.effective_date" ng-change="genPlansInEffectiveDate()"  class="ipt"   placeholder="请输入目的地" required></span>
 	</div>
-	<ul class="solution-container">
+	<ul class="toubao-container">
 		<li ng-repeat="plan in data.plans">
 			<div class="product">	
 				<div class="name">{{plan.name}}</div>	
