--- a/app/css/recognizee_compile.css
+++ b/app/css/recognizee_compile.css
@@ -58,9 +58,13 @@ input {
       margin-left: 10px;
       color: #5aa8ff; }
   .recognizee_compile_ctrl .main .head_bottom {
-    width: 40px; }
+    width: 60px;
+    position: relative; }
     .recognizee_compile_ctrl .main .head_bottom img {
       width: 15px;
+      position: absolute;
+      right: 0;
+      top: 0;
       vertical-align: middle; }
   .recognizee_compile_ctrl .main .status, .recognizee_compile_ctrl .main .phone {
     color: #999;
