--- a/app/sass/solution.scss
+++ b/app/sass/solution.scss
@@ -102,7 +102,7 @@ body {
 		border-bottom: 1px solid #ccc;
 		margin-top:-1px;
 }
-.introd{
+.contents{
 	color:#555;
 	padding-left:10px;
 	margin-top:10px;
@@ -191,9 +191,9 @@ body {
 	max-height: 325px;
 	// height: 325px;
 	overflow: auto;
-	overflow:scroll;  //显示滚动条
-	overflow-y: scroll; //显示纵向滚动条 
-	height: auto;
+	// overflow:scroll;  //显示滚动条
+	// overflow-y: scroll; //显示纵向滚动条 
 	border: 30px solid #fff;
 	padding: 0;
+	-webkit-overflow-scrolling: touch;
 }
