--- a/app/sass/toubao_new.scss
+++ b/app/sass/toubao_new.scss
@@ -66,7 +66,7 @@ body{
 	background-size: 8px;
 }
 
-.solution-container {
+.toubao-container {
 	background-color: #FFF;
 	padding: 5px 0;
 	border-bottom: 1px solid #ccc;
