--- a/app/partials/select_part.html
+++ b/app/partials/select_part.html
@@ -10,10 +10,10 @@
 	</div>
 	-->
 	<div class="head-container"  ng-click="goJingzhun()">
-		<div class="cell_hd">
+		<div class="select_cell_hd">
 			<a href="javascript:void(0)"   class="btn btn_n_primary " >个性定制</a>
 		</div>
-		<div class="cell_hd">
+		<div class="select_cell_hd">
 			<a href="javascript:void(0)" class="btn btn_unchoose" >直接购买</a>
 		</div>
 	</div>
