--- a/app/partials/bdm_list.html
+++ b/app/partials/bdm_list.html
@@ -1,4 +1,4 @@
-<link rel="stylesheet" type="text/css" href="css/bdm_list.css?rev=4842eced98292933425a9b6fa9c4fcd6">
+<link rel="stylesheet" type="text/css" href="css/bdm_list.css?rev=usgdfhgdsfhgjdfgjsd">
 <header>
 	<div class="left">
 		<!--
@@ -114,7 +114,7 @@
 				</div>
 			</div>
 			<div class="bottom">
-				<div>
+				<div class="linebox">
 				</div>
 			</div>
 		</li>
