--- a/app/sass/recognizee_compile.scss
+++ b/app/sass/recognizee_compile.scss
@@ -44,6 +44,7 @@ input {
 		box-sizing: border-box;
 		.main_head {
 			@include flexbox;
+			position: relative;
 			padding-bottom: 10px;
 			}
 			.head_left {
@@ -67,12 +68,15 @@ input {
 			}
 			.head_bottom {
 				width: 60px;
-				position: relative;
+				height: 60px; 
+				position: absolute;
+				right: -10px;
+				top: -10px;
 				img {
 					width: 15px;
 					position: absolute;
-					right: 0;
-					top: 0;
+					right: 10px;
+					top: 10px;
 					vertical-align: middle;
 				}
 			}
