--- a/app/partials/toubao_new.html
+++ b/app/partials/toubao_new.html
@@ -6,8 +6,8 @@
 		</div>
 		<div ng-show="!isFirst">
 			<div class="name">{{data.insured.username}}<span class="tag">被保人<span class="insured">（{{userRelation}}）</span></span></div>
-			<div class="mobile">手机号：{{data.user.mobile}}</div>
-			<div class="card">证件号：{{data.user.social_id}}</div>
+			<div class="mobile">手机号：{{data.insured.mobile}}</div>
+			<div class="card">证件号：{{data.insured.social_id}}</div>
 			<div >投保人：{{data.user.username}}<!-- (被保人{{userRelation}}) --></div>
 			<div>受益人：法定受益人</div>	
 			
