--- a/app/partials/recognizee.html
+++ b/app/partials/recognizee.html
@@ -38,7 +38,7 @@
 			</ul>
 	    </form>
 		<ul class="weui_cell">
-			<li>关系</li>
+			<li>他是您的</li>
 		
 			
 			<select id="relation" ng-model="relation"   ng-options="option.name for option in relations track by option.id" >
