--- a/app/partials/pay_select_new.html
+++ b/app/partials/pay_select_new.html
@@ -98,7 +98,7 @@ body{
 	<div class="name">产品方案</div>
 
 	<div class="item" ng-repeat="plan in plans">{{plan.name}}<span ng-if="plan.premium" style="float:right">{{plan.premium}}元</span></div>
-	<div class="tip" ng-show="isHaveOffical">注：方案中有部分产品，诺贝暂不支持投保请到我的方案中查看详情</div>
+	<!--<div class="tip" ng-show="isHaveOffical">注：方案中有部分产品，诺贝暂不支持投保请到我的方案中查看详情</div>-->
 	<div>支付金额：<span class="pay-money">{{order_amount | number}}</span>元</div>
 </div>
 
