--- a/app/partials/solution.html
+++ b/app/partials/solution.html
@@ -30,7 +30,7 @@
 			<div class="product-name">{{plan.name}}</div>	
 			<div class="product-des">最高保额：{{processSpecialMoney(plan.sum_insured)}}元  &nbsp; &nbsp;保{{plan.coverage_period}}{{getCoverageType(plan.coverage_period_type)}}</div>	
 			<div class="product-price"> 
-			<span ng-show="plan.status == 1">{{plan.premium}}元 </span> 
+			<span >{{plan.premium}}元 </span> 
 			<span ng-show="plan.status == 0 " style="color:#999">不符合投保条件</span>
 			<span ng-show="plan.status == 6 "  style="color:#999">投保人年龄超过限制</span>
 			<span ng-show="plan.status == 7 "  style="color:#999">被保人年龄超过限制</span>
@@ -39,7 +39,7 @@
 			 <span ng-if="plan.status!=1" class="status {{get_taocan_css(plan.status)}}" > {{getTaoCanStatus(plan.status)}}</span>
 			</div>
 		</div>	
-		<div class="arrow" ng-class="{'noclick': !plan.official_site}"  ng-click="goDetail(plan)" ></div>	
+		<div class="arrow" ng-class="{'noclick': !plan.official_site && plan.status!==1 }"  ng-click="goDetail(plan)" ></div>	
 	</li>	
 	<!--
 	<li>
