--- a/app/partials/service.html
+++ b/app/partials/service.html
@@ -7,9 +7,10 @@
 </div>
 
 <div class="service-container">
-	<div class="service-item"  ng-click="goInsuranceCard()">  <div><div class="icon icon-juan"> </div> <div class="text">我的保险劵</div></div></div>
-	<div class="service-item"  ng-click="goTradeRecord()">  <div><div class="icon icon-record"> </div> <div class="text">交易记录</div></div></div>
 	<div class="service-item"  ng-click="goBaoDan()">  <div><div class="icon icon-bd"> </div> <div class="text">我的保单</div></div></div>
+	<div class="service-item"  ng-click="goTradeRecord()">  <div><div class="icon icon-record"> </div> <div class="text">投保记录</div></div></div>
+	<div class="service-item"  ng-click="goInsuranceCard()">  <div><div class="icon icon-juan"> </div> <div class="text">我的优惠劵</div></div></div>
+	
 </div>
 
 
