--- a/app/css/information.css
+++ b/app/css/information.css
@@ -4,28 +4,59 @@
   padding: 0; }
 body {
   background: #f5f5f5; }
-.claim_controller {
-  padding: 0 .19rem 1rem .19rem;
-   }
-.claim_controller li {
-  padding-top: .38rem; }
-.claim_controller p {
-  color: #555;
-  font-weight: bold; }
-.claim_controller span {
-  font-size: 15px;
-  display: inline;
-  color: #555;
-  padding-left: .06rem;
-  vertical-align: middle; }
-.claim_controller img {
-  width: .2rem;
-  height: .2rem;
-  vertical-align: middle; }
-.content {
-  color: #555;
-  text-decoration: none;
-  font-size: 13px; }
+.information_controller {
+  padding: 0 .15rem; }
+  .information_controller .infor_head {
+    padding-top: .3rem;
+    font-weight: bold; }
+    .information_controller .infor_head img {
+      width: 15px;
+      vertical-align: -2px; }
+    .information_controller .infor_head .head_info {
+      font-size: 15px;
+      color: #555;
+      margin-left: 5px; }
+    .information_controller .infor_head .orange {
+      color: #ff5c00;
+      font-size: 12px;
+      margin-left: 10px; }
+  .information_controller .insurance_name {
+    font-size: 13px;
+    color: #555;
+    padding: 10px 0;
+    font-weight: 600; }
+  .information_controller .job {
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -moz-box;
+    display: -ms-flexbox;
+    display: flex;
+    padding-top: 15px;
+    -webkit-box-lines: multiple;
+    -webkit-flex-wrap: wrap;
+    flex-wrap: wrap;
+    -webkit-box-pack: justify;
+    -webkit-justify-content: space-between;
+    justify-content: space-between; }
+    .information_controller .job .job_info {
+      width: 90px;
+      height: 30px;
+      box-sizing: border-box;
+      border: 1px solid #ccc;
+      border-radius: 3px;
+      text-align: center;
+      line-height: 30px;
+      margin-bottom: 10px;
+      white-space: nowrap;
+      text-overflow: ellipsis;
+      overflow: hidden;
+      padding: 0 5px; }
+  .information_controller .info_word {
+    font-size: 13px;
+    color: #555;
+    line-height: 25px; }
+  .information_controller .info_toast {
+    overflow: auto; }
 .cut_container {
   overflow: hidden;
   position: fixed;
