--- a/app/sass/information.scss
+++ b/app/sass/information.scss
@@ -4,13 +4,117 @@
 body{
 	background: #f5f5f5;
 }
-.claim_controller {
-	padding: 0 .19rem 1rem .19rem;
-	/*.claim_head {
+.information_controller {
+	padding: 0 .15rem;
+	.infor_head {
+		padding-top: .3rem;
+		font-weight: bold;
 		img {
 			width: 15px;
+			vertical-align: -2px;
 		}
-	}*/
+		.head_info {
+			font-size: 15px;
+			color: #555;
+			margin-left: 5px;
+		}
+		.orange {
+			color: #ff5c00;
+			font-size: 12px;
+			margin-left: 10px;
+		}
+	}
+	.insurance_name {
+		font-size: 13px;
+		color: #555;
+		padding: 10px 0;
+		font-weight: 600;
+	}
+	// main start
+	.job {
+		@include flexbox;
+		padding-top: 15px;
+		//溢出折行
+		@include flex-wrap(wrap);
+		//自动平分
+		@include justify-content(space-between);
+		.job_info {
+			width: 90px;
+			height: 30px;
+			box-sizing: border-box;
+			border: 1px solid #ccc;
+			border-radius: 3px;
+			text-align: center;
+			line-height: 30px;
+			margin-bottom: 10px;
+			// 文字大于盒子用省略号...
+			white-space: nowrap;
+		    text-overflow: ellipsis;
+		    overflow: hidden;
+		    padding: 0 5px;
+		}
+	}
+	.info_word {
+		font-size: 13px;
+		color: #555;
+		line-height: 25px;
+	}
+	// 弹窗
+	.info_toast {
+		overflow: auto;
+	}
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/*.claim_controller {
+	padding: 0 .19rem 1rem .19rem;
 }
 .claim_controller li {
 	padding-top: .38rem;
@@ -37,6 +141,8 @@ body{
 	text-decoration: none;
 	font-size: 13px;
 }
+*/
+
 .cut_container {
 	overflow: hidden;position: fixed;bottom:0;width:100%;
 	border-top: 1px solid #e2e2e2;
@@ -51,11 +157,9 @@ body{
 	height: 48px;
 	text-decoration: none;
 	display: inline-block;
-	/*color: #555;*/
 	font-size:15px;
 	line-height: 48px;
 	text-align: center;
-	/*background: #fff;*/
 	-webkit-box-flex: 1;
  	-webkit-flex: 1;
     -ms-flex: 1;
@@ -71,4 +175,3 @@ body{
 	background: #1e4e8e;
 	color: #fff;
 }
-
