--- a/app/partials/temai_detail.html
+++ b/app/partials/temai_detail.html
@@ -96,7 +96,7 @@
 	        <div class="head_ctrl">
 	        <div class="select-container">
 	        	<h4>出生日期</h4>
-	        	<input type="date" class="date_ctrl"  min="{{minDate | date:'yyyy-MM-dd'}}" max="{{maxDate | date:'yyyy-MM-dd'}}" ng-model="user.birthday"  name="birthday"  placeholder="yyyy/MM/dd" ng-click="changeBirthday($event)">
+	        	<input type="date" class="date_ctrl"  min="{{minDate | date:'yyyy-MM-dd'}}" max="{{maxDate | date:'yyyy-MM-dd'}}" ng-model="user.birthday"  name="birthday"  placeholder="yyyy/MM/dd"  ng-change="changeBirthday($event)" ng-click="clickBirthDay($event)">
 	        </div>
 	        <div class="select-container"> 
 	        	<h4>性别</h4>
@@ -106,10 +106,7 @@
 			<div class="select-container">
 				<h4>保障方案</h4>
 				<a href="javascript:void(0)" class="button button_primary" ng-click="changeTaoCan($event,item)" ng-class="item.id==plan.id?'button_hover':''" ng-repeat="item in data.insurance_plans">{{item.name}}</a>
-					<!--
-		      <a href="javascript:void(0)" class="button button_primary button_hover">经济型</a>
-				<a href="javascript:void(0)" class="button button_primary">实惠制</a>
-				-->
+				
 			</div>
 		    <!-- <div class="select-container">
 				<h4>保额</h4>
@@ -156,6 +153,9 @@ $(function(){
  $("body").on("click",".more-1-container",function(){
  	 $(".know-content").children().removeClass("hide");
      $(this).hide();
+ });
+  $("body").on("click",".head-container",function(){
+  	return false;
  });
   $("body").on("click",".more_ctrl",function(){
  	 $(".qa-container").find("li").removeClass("hide");
