--- a/app/partials/toubao_new.html
+++ b/app/partials/toubao_new.html
@@ -76,7 +76,7 @@
 
 	<div class="tip">
 		<input type="checkbox" class="know-contract" ng-model="know_contract" name="know_contract"  >
-		我已经阅读<a href="/ybwx-web/api/web_page/15">平台协议</a>及产品条款
+		我已经阅读<a href="/ybwx-web/api/web_page/15">《平台服务协议》</a>及产品条款
 	</div>
 	</form>
 </div>
