--- a/app/partials/solution.html
+++ b/app/partials/solution.html
@@ -7,7 +7,7 @@
 	<div class="logo icon_{{type}}"> </div>
 	<div class="contaienr">
 		<div class="title">{{getInsuranceCNname()}}保障方案 {{data.score | number:1}}分</div>	
-		<div class="sub-title">方案金额:{{money}} 元</div>	
+		<div class="sub-title">方案总保费:{{money}} 元</div>	
 	</div>
 </div>
 <div class="table-wrapper"  data-ng-init="init()"  ng-class="{'border-bt': data.coverages.length<=(showNum+1)}">
@@ -58,7 +58,7 @@
 
 <div class="fix_container">
 	<div class="footer">
-	<a href="javascript:void(0)" class="btn btn_n_primary left">投保金额<span class="money">{{sumMoney}}</span> 元</a>
+	<a href="javascript:void(0)" class="btn btn_n_primary left">应交保费<span class="money">{{sumMoney}}</span> 元</a>
 	<a href="javascript:void(0)" class="btn btn_n_primary right" ng-click="goInfo()">立即投保</a>
 	</div>
 </div>
