--- a/app/partials/information.html
+++ b/app/partials/information.html
@@ -24,7 +24,9 @@
 
 	<!-- 职业扩展详情 弹窗 -->
 	<div class="mask" id="popup">
-		<div class="toast info_toast"></div>
+		<div class="toast info_toast">
+			
+		</div>
 	</div>
 </div>
 <div class="cut_container" >
