--- a/app/partials/pay_success.html
+++ b/app/partials/pay_success.html
@@ -3,7 +3,7 @@
 	<div class="win">
 		<img src="wx_share/img/win.jpg"> &nbsp;支付成功，投保中...
 	</div>
-	<div class="hint">请按照一下操作<br>查看交易记录和保单</div>
+	<div class="hint">请按照一下操作<br>查看投保记录，获取电子保单</div>
 	
 	<!-- <div class="main">
 		<div class="main_left">
@@ -19,4 +19,4 @@
 		<img src="img/tishi.jpg">
 	</div> -->
 </div>
-<div class="main"> <img src="img/win_hint/win.png"></div>
+<div class="main"> <img src="img/win_hint/main.jpg"></div>
