--- a/app/sass/recognizee_first.scss
+++ b/app/sass/recognizee_first.scss
@@ -46,10 +46,16 @@ body {
 	.main {
 		padding: 0 10px;
 		background: #fff;
+		.bottom_line {
+			border-bottom: 1px solid #e2e2e2;
+		}
+		.cell {
+			padding: 0 0 10px 75px;
+		}
 		.line-box {
 			@include flexbox;
 			line-height: .58rem;
-			border-bottom: 1px solid #e2e2e2;
+			// border-bottom: 1px solid #e2e2e2;
 			.lable {
 				padding-left: 5px; 
 				width: 70px;
