--- a/app/wx_share/partials/success_coupon.html
+++ b/app/wx_share/partials/success_coupon.html
@@ -2,11 +2,11 @@
 <link rel="stylesheet" type="text/css" href="css/pay_success.css">
 <div class="pay_success_ctrl">
 	<div class="win">
-		<img src="wx_share/img/win.jpg"> &nbsp;保险劵领取成功
+		<img src="wx_share/img/win.jpg"> &nbsp;优惠劵领取成功
 	</div>
-	<div class="hints">请按照以下步骤使用保险劵</div>
+	<div class="hints">请按照以下步骤使用优惠劵</div>
 </div>
-<div class="main"> <img src="img/win_hint/main.jpg"></div>
+<div class="main"> <img src="img/win_hint/win.png"></div>
 
 
 
