--- a/app/css/information.css
+++ b/app/css/information.css
@@ -57,6 +57,17 @@ body {
     line-height: 25px; }
   .information_controller .info_toast {
     overflow: auto; }
+    .information_controller .info_toast .toast_head {
+      box-sizing: border-box;
+      border-left: 3px solid #5aa8ff;
+      padding-left: 5px;
+      font-size: 13px;
+      color: #555;
+      margin-bottom: 10px; }
+    .information_controller .info_toast .toast_main {
+      font-size: 12px;
+      color: #555;
+      margin-bottom: 20px; }
 .cut_container {
   overflow: hidden;
   position: fixed;
