--- a/app/sass/bd_education_new.scss
+++ b/app/sass/bd_education_new.scss
@@ -13,7 +13,8 @@
 		height:0.6rem;
 		line-height: 0.6rem;
 		padding:0 0.2rem 0 50px;
-		font-size:0.18rem;
+		// font-size:0.18rem;
+		font-size: 15px;
 	}
 	header.icon_4{
 		background: #006ee9 url('../img/bd_education/plane.png') no-repeat 18px center;
@@ -87,7 +88,8 @@
 		color:#555555;
 		.table-title{
 		  border-bottom:1px solid #e2e2e2;
-		  font-size:.15rem;
+		  // font-size:.15rem;
+		  font-size: 15px;
 		  .left{
 			padding-left:0.2rem;
 		  }
@@ -115,7 +117,8 @@
 		  	  text-overflow:ellipsis;
 		  	  -o-text-overflow:ellipsis; overflow:hidden;
     		  padding: 0.1rem 0.05rem;
-			  font-size:0.15rem;
+			  // font-size:0.15rem;
+			  font-size: 15px;
 			  text-align: center;
 			  border-bottom:1px solid #e2e2e2;
 		  }
