--- a/app/sass/information.scss
+++ b/app/sass/information.scss
@@ -62,7 +62,22 @@ body{
 	// 弹窗
 	.info_toast {
 		overflow: auto;
+		.toast_head {
+			box-sizing: border-box;
+			border-left: 3px solid #5aa8ff;
+			// height: 13px;
+			padding-left: 5px;
+			font-size: 13px;
+			color: #555;
+			margin-bottom: 10px;
+		}
+		.toast_main {
+			font-size: 12px;
+			color: #555;
+			margin-bottom: 20px;
+		}
 	}
+
 }
 
 
