simple auto commit

--- a/app/partials/recognizee.html
+++ b/app/partials/recognizee.html
@@ -58,12 +58,12 @@
 				<img  style="width: 14px;" src="img/down_jian.jpg">
 			</select>
 		</ul>
-		<ul class="moren">
+		<!-- <ul class="moren">
 			<li>设为默认被保人</li>
             <div class="weui_cell_ft">
                 <input class="weui_switch" id="checkbox" ng-click="getState()" ng-model="state" type="checkbox"/>
             </div>
-		</ul>
+		</ul> -->
 	</div>
 </div>
 <div class="recognizee_btn" ng-click="save()">保 存</div>
